--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ android {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 
-            buildConfigField "int", "INPUT_CONTROL_MAX_SIZE", '200'
+            buildConfigField "int", "NOTE_HISTORY_MAX_SIZE", '200'
         }
 
         debug {
@@ -48,7 +48,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             testProguardFile 'proguard-test-rules.pro'
 
-            buildConfigField "int", "INPUT_CONTROL_MAX_SIZE", '50'
+            buildConfigField "int", "NOTE_HISTORY_MAX_SIZE", '50'
         }
     }
 
