Fix not changed-bounce RollNoteFragmentImpl.kt screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
         <activity
             android:name=".infrastructure.screen.note.NoteActivity"
             android:exported="false"
+            android:windowSoftInputMode="adjustResize"
             android:parentActivityName=".infrastructure.screen.main.MainActivity" />
 
         <activity
