--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,8 @@ dependencies {
     androidTestImplementation project(path: ':tests:common')
     androidTestImplementation project(path: ':tests:cappuccino')
 
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0"
+
     //region Google
 
     implementation "com.google.firebase:firebase-analytics-ktx:21.2.0"
