--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,15 @@ buildscript {
     dependencies {
         classpath 'com.google.gms:google-services:4.3.14'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.2'
+        classpath 'org.jetbrains.kotlin:kotlin-serialization:1.8.10'
     }
 }
 
 plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
+    id 'org.jetbrains.kotlin.plugin.serialization' version "1.8.10" apply false
 }
 
 task clean(type: Delete) {
