--- a/libraries/extensions/build.gradle
+++ b/libraries/extensions/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id "kotlinx-serialization"
 }
 
 android {
@@ -34,6 +35,7 @@ android {
 }
 
 dependencies {
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0"
 
     implementation "androidx.core:core-ktx:1.8.0"
     implementation "androidx.appcompat:appcompat:1.5.1"
