--- a/libraries/safeDialog/build.gradle
+++ b/libraries/safeDialog/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id "com.android.library"
     id 'org.jetbrains.kotlin.android'
+    id "kotlinx-serialization"
 }
 
 android {
@@ -35,6 +36,8 @@ dependencies {
     implementation project(':tests:prod')
 
     testImplementation project(path: ':tests:common')
+
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0"
 
     implementation "com.google.android.material:material:1.6.1"
 
