--- a/tests/prod/build.gradle
+++ b/tests/prod/build.gradle
@@ -13,10 +13,9 @@ android {
         consumerProguardFiles "consumer-rules.pro"
     }
 
-
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
