--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="sgtmelon.scriptum">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
           WRITE_EXTERNAL STORAGE implies READ_EXTERNAL_STORAGE, so you only need one of those,
