--- a/tests/idling/build.gradle
+++ b/tests/idling/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         minSdk 26
-        targetSdk 32
+        targetSdk 33
 
         consumerProguardFiles "consumer-rules.pro"
     }
@@ -21,13 +21,14 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_11.toString()
+        jvmTarget = JavaVersion.VERSION_17.toString()
     }
+    namespace 'sgtmelon.test.idling'
 }
 
 dependencies {
@@ -35,7 +36,7 @@ dependencies {
     implementation "androidx.transition:transition-ktx:1.4.1"
 
     // TODO make only for androidTestImplementation
-    implementation "androidx.test.espresso:espresso-idling-resource:3.4.0"
+    implementation "androidx.test.espresso:espresso-idling-resource:3.5.1"
 
     implementation 'com.jakewharton.timber:timber:5.0.1'
 }
