--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,15 @@
 [versions]
 android-core = "1.10.1"
+android-transition = "1.4.1"
+
+espresso-idling = "3.5.1"
+
+timber = "5.0.1"
 
 [libraries]
 android-core = { module = "androidx.core:core-ktx", version.ref = "android-core" }
+android-transition = { module = "androidx.transition:transition-ktx", version.ref = "android-transition" }
+
+espresso-idling = { module = "androidx.test.espresso:espresso-idling-resource", version.ref = "espresso-idling" }
+
+timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
