--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,24 +1,32 @@
 [versions]
+kotlin-serialization = "1.5.0"
+
 android-core = "1.10.1"
 android-appcompat = "1.6.1"
 android-material = "1.9.0"
+android-lifecycle = "2.6.1"
 android-transition = "1.4.1"
 
 test-core = "1.5.0"
 test-junit = "1.1.5"
+test-mockk = "1.12.4"
 test-espresso = "3.5.1"
 test-uiautomator = "2.2.0"
 
 timber = "5.0.1"
 
 [libraries]
+kotlin-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlin-serialization" }
+
 android-core = { module = "androidx.core:core-ktx", version.ref = "android-core" }
 android-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "android-appcompat" }
 android-material = { module = "com.google.android.material:material", version.ref = "android-material" }
+android-lifecycle = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "android-lifecycle" }
 android-transition = { module = "androidx.transition:transition-ktx", version.ref = "android-transition" }
 
 test-core = {module = "androidx.test:core-ktx", version.ref = "test-core"}
 test-junit = {module = "androidx.test.ext:junit", version.ref = "test-junit"}
+test-mockk = {module = "io.mockk:mockk", version.ref = "test-mockk"}
 test-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "test-espresso" }
 test-espresso-contrib = { module = "androidx.test.espresso:espresso-contrib", version.ref = "test-espresso" }
 test-espresso-idling = { module = "androidx.test.espresso:espresso-idling-resource", version.ref = "test-espresso" }
