--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,15 +4,30 @@ kotlin-serialization = "1.5.0"
 android-core = "1.10.1"
 android-appcompat = "1.6.1"
 android-material = "1.9.0"
-android-lifecycle = "2.6.1"
+android-cardview = "1.0.0"
+android-constraint = "2.1.4"
 android-transition = "1.4.1"
+android-lifecycle = "2.6.1"
+android-lifecycle-ext = "2.2.0"
+android-room = "2.5.2"
+android-preference = "1.2.0"
+android-vector = "1.1.0"
 
 test-core = "1.5.0"
+test-runner = "1.5.2"
+test-rules = "1.5.0"
 test-junit = "1.1.5"
 test-mockk = "1.12.4"
 test-espresso = "3.5.1"
 test-uiautomator = "2.2.0"
+test-coroutines = "1.6.4"
+test-arch = "2.2.0"
+test-json = "20211205"
 
+firebase-analytics = "21.3.0"
+firebase-crashlytics = "18.3.7"
+dagger = "2.41"
+leakcanary = "2.9.1"
 timber = "5.0.1"
 
 [libraries]
@@ -21,15 +36,39 @@ kotlin-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-j
 android-core = { module = "androidx.core:core-ktx", version.ref = "android-core" }
 android-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "android-appcompat" }
 android-material = { module = "com.google.android.material:material", version.ref = "android-material" }
-android-lifecycle = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "android-lifecycle" }
+android-cardview = { module = "androidx.cardview:cardview", version.ref = "android-cardview" }
+android-constraint = { module = "androidx.constraintlayout:constraintlayout", version.ref = "android-constraint" }
 android-transition = { module = "androidx.transition:transition-ktx", version.ref = "android-transition" }
+android-preference = { module = "androidx.preference:preference-ktx", version.ref = "android-preference" }
+android-vector = { module = "androidx.vectordrawable:vectordrawable", version.ref = "android-vector" }
+android-vector-animated = { module = "androidx.vectordrawable:vectordrawable-animated", version.ref = "android-vector" }
 
-test-core = {module = "androidx.test:core-ktx", version.ref = "test-core"}
-test-junit = {module = "androidx.test.ext:junit", version.ref = "test-junit"}
-test-mockk = {module = "io.mockk:mockk", version.ref = "test-mockk"}
+android-lifecycle-runtime = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "android-lifecycle" }
+android-lifecycle-ext = { module = "androidx.lifecycle:lifecycle-extensions", version.ref = "android-lifecycle-ext" }
+android-lifecycle-vm = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "android-lifecycle" }
+android-lifecycle-common = { module = "androidx.lifecycle:lifecycle-common-java8", version.ref = "android-lifecycle" }
+
+android-room-runtime = { module = "androidx.room:room-runtime", version.ref = "android-room" }
+android-room-ktx = { module = "androidx.room:room-ktx", version.ref = "android-room" }
+android-room-compiler = { module = "androidx.room:room-compiler", version.ref = "android-room" }
+android-room-testing = { module = "androidx.room:room-testing", version.ref = "android-room" }
+
+test-core = { module = "androidx.test:core-ktx", version.ref = "test-core" }
+test-runner = { module = "androidx.test:runner", version.ref = "test-runner" }
+test-rules = { module = "androidx.test:rules", version.ref = "test-rules" }
+test-junit = { module = "androidx.test.ext:junit", version.ref = "test-junit" }
+test-mockk = { module = "io.mockk:mockk", version.ref = "test-mockk" }
 test-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "test-espresso" }
 test-espresso-contrib = { module = "androidx.test.espresso:espresso-contrib", version.ref = "test-espresso" }
 test-espresso-idling = { module = "androidx.test.espresso:espresso-idling-resource", version.ref = "test-espresso" }
 test-uiautomator = { module = "androidx.test.uiautomator:uiautomator", version.ref = "test-uiautomator" }
+test-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "test-coroutines" }
+test-arch = { module = "androidx.arch.core:core-testing", version.ref = "test-arch" }
+test-json = { module = "org.json:json", version.ref = "test-json" }
 
+firebase-analytics = { module = "com.google.firebase:firebase-analytics-ktx", version.ref = "firebase-analytics" }
+firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics-ktx", version.ref = "firebase-crashlytics" }
+dagger-core = { module = "com.google.dagger:dagger", version.ref = "dagger" }
+dagger-compiler = { module = "com.google.dagger:dagger-compiler", version.ref = "dagger" }
+leakcanary = { module = "com.squareup.leakcanary:leakcanary-android", version.ref = "leakcanary" }
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
