--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,12 +12,12 @@ apply from: '../values.gradle'
 android {
     namespace 'sgtmelon.scriptum'
 
-    compileSdk 33
+    compileSdk AndroidVersion.COMPILE_SDK
 
     defaultConfig {
         applicationId "sgtmelon.scriptum"
-        minSdk 26
-        targetSdk 33
+        minSdk AndroidVersion.MIN_SDK
+        targetSdk AndroidVersion.TARGET_SDK
         versionCode 28
         versionName git.version.execute().text.trim()
 
@@ -37,7 +37,7 @@ android {
     buildTypes {
         release {
             minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile(ProFiles.DEFAULT), ProFiles.MAIN
 
             buildConfigField "int", "NOTE_HISTORY_MAX_SIZE", '200'
         }
@@ -47,8 +47,8 @@ android {
 
             /** Turn off for tests correct work! */
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            testProguardFile 'proguard-test-rules.pro'
+            proguardFiles getDefaultProguardFile(ProFiles.DEFAULT), ProFiles.MAIN
+            testProguardFile ProFiles.TEST
 
             buildConfigField "int", "NOTE_HISTORY_MAX_SIZE", '50'
         }
@@ -84,64 +84,57 @@ dependencies {
     androidTestImplementation project(path: ':tests:common')
     androidTestImplementation project(path: ':tests:cappuccino')
 
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0"
+    implementation libs.kotlin.serialization
 
-    //region Google
+    implementation libs.firebase.analytics
+    implementation libs.firebase.crashlytics
 
-    implementation "com.google.firebase:firebase-analytics-ktx:21.3.0"
-    implementation "com.google.firebase:firebase-crashlytics-ktx:18.3.7"
-
-    implementation "com.google.android.material:material:1.9.0"
-
-    implementation "com.google.dagger:dagger:2.41"
-    kapt "com.google.dagger:dagger-compiler:2.41"
-
-    //endregion
+    implementation libs.dagger.core
+    kapt libs.dagger.compiler
 
     //region AndroidX
 
-    implementation "androidx.core:core-ktx:1.10.1"
+    implementation libs.android.core
+    implementation libs.android.appcompat
+    implementation libs.android.material
+    implementation libs.android.cardview
+    implementation libs.android.constraint
 
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
-    implementation "androidx.lifecycle:lifecycle-common-java8:2.6.1"
+    implementation libs.android.lifecycle.ext
+    implementation libs.android.lifecycle.vm
+    implementation libs.android.lifecycle.common // TODO is it needed? may be try runtime dependency
 
-    implementation "androidx.room:room-runtime:2.5.2"
-    implementation "androidx.room:room-ktx:2.5.2"
-    kapt "androidx.room:room-compiler:2.5.2"
-    testImplementation "androidx.room:room-testing:2.5.2"
+    implementation libs.android.room.runtime
+    implementation libs.android.room.ktx
+    kapt libs.android.room.compiler
+    implementation libs.android.room.testing
 
-    implementation "androidx.preference:preference-ktx:1.2.0"
-    implementation "androidx.appcompat:appcompat:1.6.1"
-    implementation "androidx.cardview:cardview:1.0.0"
-    implementation "androidx.constraintlayout:constraintlayout:2.1.4"
-
-    implementation "androidx.vectordrawable:vectordrawable:1.1.0"
-    implementation "androidx.vectordrawable:vectordrawable-animated:1.1.0"
+    implementation libs.android.preference
+    implementation libs.android.vector
+    implementation libs.android.vector.animated
 
     //endregion
 
     //region Testing
 
-    debugImplementation "com.squareup.leakcanary:leakcanary-android:2.9.1"
+    debugImplementation libs.leakcanary
 
-    androidTestImplementation "androidx.test:core-ktx:1.5.0"
-    androidTestImplementation "androidx.test:runner:1.5.2"
-    androidTestImplementation "androidx.test:rules:1.5.0"
-    androidTestImplementation "androidx.test.ext:junit:1.1.5"
+    androidTestImplementation libs.test.core
+    androidTestImplementation libs.test.runner
+    androidTestImplementation libs.test.rules
+    androidTestImplementation libs.test.junit
 
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
-    androidTestImplementation "androidx.test.espresso:espresso-contrib:3.5.1"
+    androidTestImplementation libs.test.espresso.core
+    androidTestImplementation libs.test.espresso.contrib
+    androidTestImplementation libs.test.uiautomator
 
-    androidTestImplementation "androidx.test.uiautomator:uiautomator:2.2.0"
-
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
-    testImplementation "androidx.arch.core:core-testing:2.2.0"
-    testImplementation "io.mockk:mockk:1.12.4"
-    testImplementation "org.json:json:20211205"
+    testImplementation libs.test.mockk
+    testImplementation libs.test.coroutines
+    testImplementation libs.test.arch
+    testImplementation libs.test.json
 
     //endregion
 
-    implementation 'com.jakewharton.timber:timber:5.0.1'
+    implementation libs.timber
 
 }
