--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,7 @@ test-junit = "1.1.5"
 test-mockk = "1.12.4"
 test-espresso = "3.5.1"
 test-uiautomator = "2.2.0"
+test-orchestrator = "1.4.2"
 test-coroutines = "1.6.4"
 test-arch = "2.2.0"
 test-json = "20211205"
@@ -41,7 +42,7 @@ android-cardview = { module = "androidx.cardview:cardview", version.ref = "andro
 android-constraint = { module = "androidx.constraintlayout:constraintlayout", version.ref = "android-constraint" }
 android-transition = { module = "androidx.transition:transition-ktx", version.ref = "android-transition" }
 android-preference = { module = "androidx.preference:preference-ktx", version.ref = "android-preference" }
-android-vector = { module = "androidx.vectordrawable:vectordrawable", version.ref = "android-vector" }
+android-vector-main = { module = "androidx.vectordrawable:vectordrawable", version.ref = "android-vector" }
 android-vector-animated = { module = "androidx.vectordrawable:vectordrawable-animated", version.ref = "android-vector" }
 
 android-lifecycle-runtime = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "android-lifecycle" }
@@ -63,6 +64,7 @@ test-espresso-core = { module = "androidx.test.espresso:espresso-core", version.
 test-espresso-contrib = { module = "androidx.test.espresso:espresso-contrib", version.ref = "test-espresso" }
 test-espresso-idling = { module = "androidx.test.espresso:espresso-idling-resource", version.ref = "test-espresso" }
 test-uiautomator = { module = "androidx.test.uiautomator:uiautomator", version.ref = "test-uiautomator" }
+test-orchestrator = { module = "androidx.test:orchestrator", version.ref = "test-orchestrator" }
 test-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "test-coroutines" }
 test-arch = { module = "androidx.arch.core:core-testing", version.ref = "test-arch" }
 test-json = { module = "org.json:json", version.ref = "test-json" }
